# microservice-template

./: .env  .env.ci  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.txt  Dockerfile  LICENSE  README.md  database.ini.template  docker-compose.yml  pyproject.toml  run-dev-server.py  set-version.sh  setup-dev-db.sh  setup.cfg
docker/flyway/: Dockerfile  wait-for-postgres.sh
docker/postgres/: Dockerfile
flyway/database-migrations/: V1_0__xxx_service_component.sql  V1_1__xxx_service_tables.sql  afterMigrate__grants.sql  beforeMigrate__dev.sql
tests/: test_xxx_service.py
xxx_service/: __init__.py  config.py  database_util.py  info.py  logging.conf  patterns.py  serialization_util.py  util.py  xxx.py  xxx_dtos.py
xxx_service/core/: something_duplicates_filter.py  something_repository.py
